@@ -1,3 +1,7 @@
+2014-09-24  Jiong Wang  <jiong.wang@arm.com>
+
+	* gcc.target/aarch64/shrink_wrap_symbol_ref_1.c: New testcase.
+
 2014-09-24  Marek Polacek  <polacek@redhat.com>
 
 	PR c/61405
